tests/05-pre-deployment-checks/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: maintenance-window-check
spec:
  bindings:
  - name: repo
    value: (env('GITHUB_REPOSITORY'))
  steps:
  - try:
    - apply:
        resource:
          apiVersion: argoproj.io/v1alpha1
          kind: Application
          metadata:
            name: demo-app-test
            namespace: argocd
            annotations:
              argocd.argoproj.io/sync-wave: '10'
            finalizers:
              - resources-finalizer.argocd.argoproj.io
          spec:
            project: default
            source:
              path: charts/demo-app
              repoURL: (join('/', ['https://github.com', $repo]))
              targetRevision: main
              helm:
                valuesObject:
                  repo:
                    name: ($repo)
                  keptn:
                    appContext:
                      preDeploymentTasks:
                      - maintenance-window-check
                valueFiles:
                  - ../../gitops/dev/demo-app/values.yaml
                  - ../../gitops/dev/demo-app/values-specific.yaml
                parameters:
                  - name: commitID
                    value: $ARGOCD_APP_REVISION
                  - name: serviceVersion
                    value: v1
                  - name: service.nodePort
                    value: '31106'
            destination:
              server: https://kubernetes.default.svc
              namespace: ($namespace)
            syncPolicy:
              automated:
                prune: true
                selfHeal: true
    - assert:
        timeout: 10m
        resource:
          apiVersion: argoproj.io/v1alpha1
          kind: Application
          metadata:
            name: demo-app-test
            namespace: argocd
          status:
            health:
              status: Healthy
            sync:
              status: Synced
    - assert:
        timeout: 1m
        resource:
          apiVersion: lifecycle.keptn.sh/v1
          kind: KeptnApp
          metadata:
            name: demo-app
    - apply:
        resource:
          apiVersion: argoproj.io/v1alpha1
          kind: Application
          metadata:
            name: demo-app-test
            namespace: argocd
            annotations:
              argocd.argoproj.io/sync-wave: '10'
            finalizers:
              - resources-finalizer.argocd.argoproj.io
          spec:
            project: default
            source:
              path: charts/demo-app
              repoURL: (join('/', ['https://github.com', $repo]))
              targetRevision: main
              helm:
                valuesObject:
                  repo:
                    name: ($repo)
                  keptn:
                    appContext:
                      preDeploymentTasks:
                      - maintenance-window-check
                valueFiles:
                  - ../../gitops/dev/demo-app/values.yaml
                  - ../../gitops/dev/demo-app/values-specific.yaml
                parameters:
                  - name: commitID
                    value: $ARGOCD_APP_REVISION
                  - name: serviceVersion
                    value: v2
                  - name: service.nodePort
                    value: '31106'
            destination:
              server: https://kubernetes.default.svc
              namespace: ($namespace)
            syncPolicy:
              automated:
                prune: true
                selfHeal: true
    - assert:
        timeout: 2m
        resource:
          apiVersion: lifecycle.keptn.sh/v1
          kind: KeptnTask
          spec:
            checkType: pre
            context:
              appName: demo-app
              appVersion: v2
              objectType: App
              taskType: pre
              workloadName: ""
            taskDefinition: maintenance-window-check
          status:
            status: Succeededg
